# bge_embedding_api

./: .gitignore  LICENSE  README.md  config_template.yaml  main.py  pyproject.toml
bge_embedding_api/: __init__.py  run_server.py
bge_embedding_api/app/api/: bge.py  bge_rerank.py
bge_embedding_api/app/models/: request.py
