[tool.poetry]
name = "bge-embedding-api"
version = "0.1.0"
description = ""
authors = ["Sayo <ws11579@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.37.2"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
torch = "^2.0.1"
flagembedding = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
